--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,2 +1,7 @@
-FROM golang:1.21-alpine
+FROM golang:alpine
 WORKDIR /app
+COPY . .
+RUN go mod download
+RUN go build -o main .
+EXPOSE 8080
+CMD [ "go", "run", "main.go" ]
